fix: show shadow in dark mode

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -139,6 +139,6 @@ kbd:not(.DocSearch-Button-Key) {
 .vp-doc > div > p > img {
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 10px #8883;
   border-radius: 8px;
 }
